@@ -77,10 +77,10 @@ config.status: configure
 		--with-pgsql=/usr \
 		--with-mysql=/usr \
 		--with-proc-loadavg=/proc/loadavg \
-		--with-ps-command="/bin/ps axwo 'stat uid pid ppid vsz rss pcpu comm args'" \
-		--with-ps-format="%s %d %d %d %d %d %f %s %n" \
-		--with-ps-cols=9 \
-		--with-ps-varlist="procstat,&procuid,&procpid,&procppid,&procvsz,&procrss,&procpcpu,procprog,&pos" \
+		--with-ps-command="/bin/ps axwo 'stat uid pid ppid vsz rss pcpu etime comm args'" \
+		--with-ps-format="%s %d %d %d %d %d %f %s %s %n" \
+		--with-ps-cols=10 \
+		--with-ps-varlist="procstat,&procuid,&procpid,&procppid,&procvsz,&procrss,&procpcpu,procetime,procprog,&pos" \
 		--with-ping-command="/bin/ping -n -U -w %d -c %d %s" \
 		--with-ping6-command="/bin/ping6 -n -U -w %d -c %d %s" \
 		--with-nslookup-command="/usr/bin/nslookup -sil" \
