@@ -2,8 +2,10 @@ nagios-plugins (1.4.13+git200906171200-2) UNRELEASED; urgency=low
 
   * added libmysqlclient16-dev to build-deps and moved libmysqlclient-dev to
     the first position (Closes: #538487)
+  * configure ps to use also etime with check_proc, thanks to
+    Justin T Pryzby (Closes: #540107)
 
- -- Jan Wagner <waja@cyconet.org>  Tue, 07 Jul 2009 11:12:50 +0200
+ -- Jan Wagner <waja@cyconet.org>  Thu, 06 Aug 2009 00:11:51 +0200
 
 nagios-plugins (1.4.13+git200906171200-1) unstable; urgency=low
 
